<resources>
    <string name="app_name">Crystal</string>
    <string name="default_web_client_id">529436008604-hajctsrpuh5skhj3vaab1jg0sj1ift6h.apps.googleusercontent.com</string>
    <string name="cent_metros">Centímetros</string>
    <string name="medida">Medida:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="agregar">agregar</string>
    <string name="limpiar">limpiar</string>
    <string name="costear">costear</string>
    <string name="pies_cuadrados">Pies cuadrados:</string>
    <string name="_0_0">0.0</string>
    <string name="metros_cuadrados">Metros cuadrados:</string>
    <string name="medidas_y_cantidades">Medidas y Cantidades</string>
    <string name="medidas_en_cent_metros">Medidas en Centímetros</string>
    <string name="referencias">Referencias</string>
    <string name="precio">Precio:</string>
    <string name="producto">Producto:</string>
    <string name="corte_especial">Corte Especial:</string>
    <string name="_1_8_cm_de_retaso">* 1.8 cm de retaso</string>
    <string name="pies_metros_precio">Pies *_ Metros *_ Precio</string>
    <string name="sumatorias">Sumatorias</string>
    <string name="metros">Metros *</string>
    <string name="pies">Pies *</string>
    <string name="listado_de_medidas">listado de Medidas</string>
    <string name="calcular">Calcular</string>
    <string name="decimales">#.00</string>
    <string name="p_cuadrados">P.cuadrados</string>
    <string name="m_cuadrados">M.cuadrados</string>
    <string name="en_cent_metros">En Centímetros</string>
    <string name="entonces"><![CDATA[->]]></string>
    <string name="igual">=</string>
    <string name="por">×</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="costo_unitario">Costo Unitario:</string>
    <string name="costo_cantidad">Costo Cantidad:</string>
    <string name="costo_total">Costo Total:</string>
    <string name="ojito_ojito">¡Ojito,ojito!</string>
    <string name="qu_desea_hacer">¿Qué desea hacer?</string>
    <string name="editar">editar</string>
    <string name="eliminar">eliminar</string>
    <string name="aceptar">aceptar</string>
    <string name="x5">5%</string>
    <string name="reset">«</string>
    <string name="borrar">Borrar</string>
    <string name="dividir">÷</string>
    <string name="restar">-</string>
    <string name="sumar">+</string>
    <string name="punto">.</string>
    <string name="cero">0</string>
    <string name="volver">←</string>
    <string name="tres">3</string>
    <string name="dos">2</string>
    <string name="uno">1</string>
    <string name="seis">6</string>
    <string name="cinco">5</string>
    <string name="cuatro">4</string>
    <string name="nueve">9</string>
    <string name="ocho">8</string>
    <string name="siete">7</string>
    <string name="por10">10%</string>
    <string name="creset">c</string>
    <string name="ir_a_lista">ir a lista</string>
    <string name="pies_total">Pies Total:</string>
    <string name="metros_total">Metros Total:</string>
    <string name="cliente">Cliente.</string>
    <string name="medidas_y_cantidad">Medidas y Cantidad</string>
    <string name="modelos_y_medidas">Modelos y Medidas</string>
    <string name="x">X</string>
    <string name="caracteristicas">Ficha Técnica</string>
    <string name="mampara_aluminio_fc">Mampara Aluminio FC</string>
    <string name="ancho">Ancho:</string>
    <string name="alto">Alto:</string>
    <string name="med_cdza">Med.Cdza</string>
    <string name="junkillo">Junkillo</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="rejilla_col_fil">Rejilla col / fil</string>
    <string name="referencias_y_c_lculos">Referencias y Cálculos</string>
    <string name="c_lculos">Cálculos</string>
    <string name="marco">Marco</string>
    <string name="ang_tope">Ang.tope</string>
    <string name="bastidor">Bastidor</string>
    <string name="riel">Riel</string>
    <string name="vidrios">Vidrios</string>
    <string name="vidrios_apilado">Vidrio apilado</string>
    <string name="vidrio_mocheta">Vidrio mocheta</string>
    <string name="archivar">archivar</string>
    <string name="portafelpa">Portafelpa</string>
    <string name="puerta_de_aluminio_e">Puerta de Aluminio E</string>
    <string name="mampara_aluminio_fccfs">mampara aluminio FCCFS</string>
    <string name="alto_cdza">Alto.Cdza</string>
    <string name="crystal">crystal</string>
    <string name="Mamparas">mamparas</string>
    <string name="nova">Nova</string>
    <string name="Vitrov_n">Vitrovén</string>
    <string name="proyectante">proyectante</string>
    <string name="ficha_t_cnica">Ficha técnica</string>
    <string name="alto_hoja">Alto hoja</string>
    <string name="puerta_de_pa_os">Puerta de Paños</string>
    <string name="ang_corto">Ang Corto</string>
    <string name="materiales">Materiales</string>
    <string name="hojas">Hojas</string>
    <string name="u_13">u-13</string>
    <string name="u_3_8">u-3/8</string>
    <string name="u_felpa">u-felpa</string>
    <string name="fijo_corre">Fijo-corre</string>
    <string name="multi">Multi</string>
    <string name="p_felpa">P-felpa</string>
    <string name="hache">Hache</string>
    <string name="sobreluz">Sobreluz</string>
    <string name="nova_aparente">Nova aparente</string>
    <string name="u_marco">u.Marco</string>
    <string name="m_ltiple">Múltiple</string>
    <string name="tee">Tee</string>
    <string name="partes">Partes</string>
    <string name="h_puente">h.Puente</string>
    <string name="_sobreluz">°Sobreluz</string>
    <string name="parante">Parante</string>
    <string name="ngulo_tp">Ángulo.tp</string>
    <string name="tubo_6x2_5">Tubo 6x2.5</string>
    <string name="piso">Piso</string>
    <string name="tubo">Tubo</string>
    <string name="pafl_n">Paflón</string>
    <string name="nova_inaparente">nova inaparente</string>
    <string name="u_felpero">u.Felpero</string>
    <string name="perimetros">Perimetros</string>
    <string name="todo">TODO</string>
    <string name="nova_corrediza">Nova Corrediza</string>
    <string name="_8">8</string>
    <string name="jamba">Jamba</string>
    <string name="dirección">Dirección</string>
    <string name="clips">Clips</string>
    <string name="V">V</string>
    <string name="platina">Platina</string>
    <string name="opciones">Opciones</string>
    <string name="_0">0</string>
    <string name="costos">Costos</string>
    <string name="costos_y_sumas">Costos y Sumas</string>
    <string name="cruce">Cruce</string>
    <string name="accesorios">Accesorios</string>
    <string name="otros">Otros</string>
    <string name="z_calo">Zócalo</string>
    <string name="ensayos">Ensayos</string>
    <string name="etiqueta">Etiqueta</string>
    <string name="medida_total">Medida Total</string>
    <string name="n_divisiones">N° divisiones</string>
    <string name="gru_a">Gruña</string>
    <string name="desarrollo_d">Desarrollo(d)</string>
    <string name="flecha_f">Flecha(f)</string>
    <string name="curvos">Curvos</string>
    <string name="curvo">Curvo</string>
    <string name="varillas">Varillas</string>
    <string name="escalas">Escalas</string>
    <string name="planchas">Planchas</string>
    <string name="flecha">Flecha</string>
    <string name="cuerda_c">Cuerda©</string>
    <string name="adelante">Adelante</string>
    <string name="daniel">daniel</string>
    <string name="ventana_de_aluminio">Ventana de aluminio</string>
    <string name="pivot_de_aluminio">Pivot de aluminio</string>
    <string name="referencia">Referencia</string>
    <string name="a_adir">Añadir</string>
    <string name="optimizar">Optimizar</string>
    <string name="varilla">600</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="registrate_aqui">REGISTRATE AQUI</string>
    <string name="a_n_no_tienes_cuenta">Aún No tienes cuenta?</string>
    <string name="registrate">registrarse</string>
    <string name="si_no_est_registrado_pulsa_aqu">Si no está registrado aún, pulse aquí</string>
    <string name="MuroCortina">MuroCortina</string>
    <string name="div_hztal">Div.hztal</string>
    <string name="div_vtcal">Div.vtcal</string>
    <string name="h_hoja" translatable="false">h.hoja</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="diseño">Diseño</string>
    <string name="guardar">guardar</string>
    <string name="abrir">abrir</string>
    <string name="ok">ok</string>
    <string name="choose_window_type" translatable="false">seleciona</string>
    <string name="choose_window_material" translatable="false">este tambien</string>
    <string name="experto">Modo Experto</string>
    <string name="contratos">contratos</string>
    <string name="proformas">Proformas</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">teléfono</string>
    <string name="free">Gratis</string>
    <string name="recibo">recibo</string>
    <string name="pais">Pais</string>
    <string name="anexar">anexar</string>
    <string name="convertir">convertir</string>
    <string name="fijos">Fijos</string>
    <string name="corredizas">Corredizas</string>
    <string name="dise_o">Diseño</string>
    <string name="divisiones">Divisiones</string>
    <string name="serie_20">Serie 20</string>
    <string name="traslapo">Traslapo</string>
    <string name="cabezal">Cabezal</string>
    <string name="adaptador">Adaptador</string>
    <string name="pruebas">Pruebas</string>
    <string name="riel_sup">Riel Sup.</string>
    <string name="riel_inf">Riel Inf.</string>
    <string name="grados">Grados</string>
    <string name="tipo">Tipo</string>
    <string name="puertas">Puertas</string>
    <string name="otros_dise_os">Otros diseños</string>
    <string name="otros_datos">Otros datos</string>
    <string name="mocheta_inf">Mocheta inf</string>
    <string name="ancho_2">Ancho 2</string>
    <string name="buscar">Buscar</string>
    <string name="tirador">tirador</string>

    <!-- Nuevos strings para presupuestos -->
    <string name="enviar_presupuesto">Enviar presupuesto</string>
    <string name="cargar_presupuesto">Cargar presupuesto</string>
    <string name="presupuesto_recibido">Presupuesto recibido</string>
    <string name="guardar_como_json">Guardar como JSON</string>
    <string name="compartir_presupuesto">Compartir presupuesto</string>
    <string name="opciones_presupuesto">Opciones de presupuesto</string>
    <!-- Mando de divisiones del diseño del muro -->
    <string name="divisiones_del_dise_o">Divisiones del diseño</string>
    <string name="filas">Filas</string>
    <string name="columnas">Columnas</string>
    <string name="mbito_de_la_fila">Ámbito de la fila</string>
</resources>