<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".optimizadores.Ncurvos">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/medida"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,TouchTargetSizeCheck"/>

            <EditText
                android:id="@+id/etCuerda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/medida"
                android:inputType="numberDecimal"
                tools:ignore="Autofill,TouchTargetSizeCheck"/>

            <EditText
                android:id="@+id/etFlecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/flecha"
                android:inputType="number"
                tools:ignore="Autofill,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/etP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/n_divisiones"
                android:inputType="number"
                tools:ignore="Autofill,TouchTargetSizeCheck"/>

            <EditText
                android:id="@+id/etGruna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/gru_a"
                android:inputType="number"
                tools:ignore="Autofill,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="9dp">

            <Button
                android:id="@+id/btCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calcular"
                android:backgroundTint="@color/rojo"
                android:textColor="@color/blanco"
                android:layout_gravity="center"
                tools:ignore="InefficientWeight" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="9dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment,UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="9dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/divisiones"
                        android:background="@color/blanco"/>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desarrollo_d"
                        android:background="@color/sombra"/>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/flecha_f" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cuerda_c"
                        android:background="@color/sombra"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="9dp">

                    <TextView
                        android:id="@+id/tvDivis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:background="@color/blanco"/>

                    <TextView
                        android:id="@+id/tvD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:background="@color/sombra"/>

                    <TextView
                        android:id="@+id/tvFlecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/tvCuerda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:background="@color/sombra"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>